infra/k8s/rc-announcements-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-announcementsinfo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-announcementsinfo
  template:
    metadata:
      labels:
        app: rc-announcementsinfo
    spec:
      containers:
        - name: rc-announcementsinfo
          image: agni1984/rc-announcementsinfo:latest
---
apiVersion: v1
kind: Service
metadata:
  name: rc-announcementsinfo-srv
spec:
  type: ClusterIP
  selector:
    app: rc-announcementsinfo
  ports:
    - name: rc-announcementsinfo
      port: 4010
      targetPort: 4010
