infra/k8s/rc-classifieds-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-classifieds-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-classifieds
  template:
    metadata:
      labels:
        app: rc-classifieds
    spec:
      containers:
        - name: rc-classifieds
          image: agni1984/rc-classifieds:v1.0.0-snopshot
---
apiVersion: v1
kind: Service
metadata:
  name: rc-classifieds-srv
spec:
  selector:
    app: rc-classifieds
  ports:
    - name: rc-classifieds
      protocol: TCP
      port: 4005
      targetPort: 4005
