infra/k8s/rc-contactsinfo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-contactsinfo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-contactsinfo
  template:
    metadata:
      labels:
        app: rc-contactsinfo
    spec:
      containers:
        - name: rc-contactsinfo
          image: agni1984/rc-contactsinfo
---
apiVersion: v1
kind: Service
metadata:
  name: rc-contactsinfo-srv
spec:
  selector:
    app: rc-contactsinfo
  ports:
    - name: rc-contactsinfo
      protocol: TCP
      port: 4001
      targetPort: 4001
