infra/k8s/rc-facilitybooking-depl copy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-facilitybooking-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-facilitybooking
  template:
    metadata:
      labels:
        app: rc-facilitybooking
    spec:
      containers:
        - name: rc-facilitybooking
          image: agni1984/rc-facilitybooking:v1.0.0-snopshot
---
apiVersion: v1
kind: Service
metadata:
  name: rc-facilitybooking-srv
spec:
  selector:
    app: rc-facilitybooking
  ports:
    - name: rc-facilitybooking
      protocol: TCP
      port: 4008
      targetPort: 4008
