infra/k8s/rc-facilitybooking-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-facilitybookinginfo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-facilitybookinginfo
  template:
    metadata:
      labels:
        app: rc-facilitybookinginfo
    spec:
      containers:
        - name: rc-facilitybookinginfo
          image: agni1984/rc-facilitybookinginfo:latest
---
apiVersion: v1
kind: Service
metadata:
  name: rc-facilitybookinginfo-srv
spec:
  type: ClusterIP
  selector:
    app: rc-facilitybookinginfo
  ports:
    - name: rc-facilitybookinginfo
      port: 4008
      targetPort: 4008
