infra/k8s/rc-maintenance-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-maintenanceinfo-depl
  labels:
    app: rc-maintenanceinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-maintenanceinfo
  template:
    metadata:
      labels:
        app: rc-maintenanceinfo
    spec:
      containers:
        - name: rc-maintenanceinfo
          image: agni1984/rc-maintenanceinfo:latest
---
apiVersion: v1
kind: Service
metadata:
  name: rc-maintenanceinfo-srv
spec:
  type: ClusterIP
  selector:
    app: rc-maintenanceinfo
  ports:
    - name: rc-maintenanceinfo
      port: 4009
      targetPort: 4009
