infra/k8s/rc-payments-depl copy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-payments
  template:
    metadata:
      labels:
        app: rc-payments
    spec:
      containers:
        - name: rc-payments
          image: agni1984/rc-payments
---
apiVersion: v1
kind: Service
metadata:
  name: rc-payments-srv
spec:
  selector:
    app: rc-payments
  ports:
    - name: rc-payments
      protocol: TCP
      port: 4012
      targetPort: 4012
