infra/k8s/rc-payments-depl.yml

#kubectl apply -f rc-payments-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-payments-depl
  labels:
    app: rc-payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-payments
  template:
    metadata:
      labels:
        app: rc-payments
    spec:
      containers:
        - name: rc-payments
          image: agni1984/rc-paymentsinfo:v1.0.0-snopshot
          ports: 
            - containerPort: 4012
---
apiVersion: v1
kind: Service
metadata:
  name: rc-payments-srv
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /payments/health-status
spec:
  type: NodePort
  selector:
    app: rc-payments
  ports:
    - name: rc-payments
      port: 4012
      targetPort: 4012
