infra/k8s/rc-polling-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-pollinginfo-depl
  labels:
    app: rc-pollinginfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-pollinginfo
  template:
    metadata:
      labels:
        app: rc-pollinginfo
    spec:
      containers:
        - name: rc-pollinginfo
          image: agni1984/rc-pollinginfo:latest
---
apiVersion: v1
kind: Service
metadata:
  name: rc-pollinginfo-srv
spec:
  type: ClusterIP
  selector:
    app: rc-pollinginfo
  ports:
    - name: rc-pollinginfo
      port: 4007
      targetPort: 4007
