infra/k8s/rc-users-depl copy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-users-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-users
  template:
    metadata:
      labels:
        app: rc-users
    spec:
      containers:
        - name: rc-users
          image: agni1984/rc-users
---
apiVersion: v1
kind: Service
metadata:
  name: rc-users-srv
spec:
  selector:
    app: rc-users
  ports:
    - name: rc-users
      protocol: TCP
      port: 4002
      targetPort: 4002
