infra/k8s/ingress-srv.yaml
#  kubectl apply -f ALB-Ingress.yml
# Annotations Reference:  https://kubernetes-sigs.github.io/aws-alb-ingress-controller/guide/ingress/annotation/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rc-restapp-service
  labels:
    app: rc-restapp
  annotations:
    # Ingress Core Settings
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    # alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    # alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #alb.ingress.kubernetes.io/healthcheck-path: /health-status
    #alb.ingress.kubernetes.io/healthcheck-interval-seconds: '60'
    #alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    #alb.ingress.kubernetes.io/success-codes: '200'
    #alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    #alb.ingress.kubernetes.io/unhealthy-threshold-count: '10'
    ## SSL Settings
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:860905879962:certificate/430eecf1-95a8-44db-9b50-8dc5cb26fd11
    # SSL Redirect Setting
    #alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'

spec:
  rules:
    - http:
        paths:         
          - path: /api/contacts/*
            backend:
              serviceName: rc-contactsinfo-srv
              servicePort: 4001
          - path: /api/payments/*
            backend:
              serviceName: rc-payments-srv
              servicePort: 4012
          - path: /*
            backend:
              serviceName: rc-frontend-srv
              servicePort: 3000
